# fieldmsg

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-03-19-fieldmsg.md
examples/: config.toml
src/fieldmsg/: announces.py  config.py  core.py  main.py  store.py
src/fieldmsg/tui/: announces.py  app.py  app.tcss  chat.py  contacts.py  inbox.py  interfaces.py
systemd/: fieldmsg.service
tests/: test_announces.py  test_config.py  test_core.py  test_main.py  test_store.py
