[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fieldmsg"
version = "0.1.0"
description = "Lightweight LXMF messenger for Reticulum"
requires-python = ">=3.10"
dependencies = [
    "rns",
    "lxmf",
    "textual>=0.40.0",
    "tomli; python_version < '3.11'",
]

[project.scripts]
fieldmsg = "fieldmsg.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldmsg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
